Fix #36080: fix cycles crash with certain group node setups, accessing freed memory.